<resources>
    <string name="app_name">Contenedores</string>
    <string name="titulo">TextView (Título)</string>
    <string name="boton1">Boton1</string>
    <string name="boton2">Boton2</string>
    <string name="creditos">TextView (Creditos)</string>
    <string name="rojo">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
</resources>
