<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBlack"
    tools:context="com.example.jalberssonplazas.contenedores.relativeActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:text="@string/rojo"
        />
    <Button
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:text="@string/orange"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow"
        android:text="@string/yellow"
        android:layout_alignParentRight="true"
        />
    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/colorGreen"
        android:text="@string/green"
        android:layout_toLeftOf="@id/blue"
        android:layout_below="@id/orange"
        />
    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@color/colorBlue"
        android:text="@string/blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/orange"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/colorIndigo"
        android:text="@string/indigo"
        android:layout_below="@id/orange"
        android:layout_toRightOf="@id/blue"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViolet"
        android:text="@string/violet"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
