<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.contenedores.linearActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/titulo"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:background="@color/colorClearblue"
        android:layout_marginBottom="@dimen/margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBlue"
        android:layout_marginBottom="@dimen/margin"
        >
        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="@string/boton1"
            android:background="@color/colorYellow"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            />
        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="@string/boton2"
            android:background="@color/colorYellow"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/margin"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/creditos"
        android:background="@color/colorViolet"
        android:textAlignment="center"
        android:padding="@dimen/padding"
        />
</LinearLayout>
